# datask

./: .gitignore  CMakeLists.txt  README.md  database_ex.csv  test.cpp
src/: main.cpp
src/backend/: bst.hpp  cleanup.hpp  graph.hpp  hash_table.hpp  list.hpp  queue.hpp  stack.hpp  storage.hpp  task.hpp
src/frontend/: dashboard.hpp
